# AlgoTrading

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  run.sh  setup.sh
configure/: CMakeLists.txt
grpc/: orderbook.grpc.pb.cc  orderbook.grpc.pb.h  orderbook.pb.cc  orderbook.pb.h  orderbook.proto
include/: OrderBookServer.h  WebSocketClient.h
include/trading/: Order.h  OrderBook.h
src/: OrderBookServer.cpp  WebSocketClient.cpp  error.txt  main.cpp
src/trading/: Order.cpp  OrderBook.cpp
